--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,11 @@
 			<version>${vaadin-spring-boot-starter.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>com.vaadin</groupId>
+			<artifactId>vaadin-lumo-theme</artifactId>
+			<version>3.0.5</version>
+		</dependency>
+		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 		</dependency>
