--- a/package.json
+++ b/package.json
@@ -4,18 +4,110 @@
   "dependencies": {
     "@polymer/polymer": "3.2.0",
     "@webcomponents/webcomponentsjs": "^2.2.10",
-    "@vaadin/flow-deps": "./target/frontend"
+    "@vaadin/router": "^1.6.0",
+    "@vaadin/flow-frontend": "./target/flow-frontend",
+    "@vaadin/vaadin-grid": "5.5.1",
+    "@vaadin/vaadin-icons": "4.3.1",
+    "@vaadin/vaadin-split-layout": "4.1.1",
+    "@vaadin/vaadin-combo-box": "5.0.11",
+    "@vaadin/vaadin-core-shrinkwrap": "15.0.4",
+    "@vaadin/vaadin-upload": "4.2.2",
+    "@vaadin/vaadin-dialog": "2.2.1",
+    "@vaadin/vaadin-select": "2.1.7",
+    "@vaadin/vaadin-app-layout": "2.0.4",
+    "@vaadin/vaadin-item": "2.1.1",
+    "@vaadin/vaadin-notification": "1.4.0",
+    "@vaadin/vaadin-progress-bar": "1.1.2",
+    "@vaadin/vaadin-ordered-layout": "1.1.0",
+    "@vaadin/vaadin-login": "1.0.1",
+    "@vaadin/vaadin-button": "2.2.2",
+    "@vaadin/vaadin-date-picker": "4.0.8",
+    "@vaadin/vaadin-text-field": "2.5.5",
+    "@vaadin/vaadin-menu-bar": "1.0.5",
+    "@vaadin/vaadin-custom-field": "1.0.11",
+    "@vaadin/vaadin-form-layout": "2.1.7",
+    "@vaadin/vaadin-accordion": "1.0.1",
+    "@polymer/iron-list": "3.0.2",
+    "@vaadin/vaadin-list-box": "1.2.0",
+    "@vaadin/vaadin-checkbox": "2.2.13",
+    "@vaadin/vaadin-details": "1.0.1",
+    "@polymer/iron-icon": "3.0.1",
+    "@vaadin/vaadin-time-picker": "2.0.7",
+    "@vaadin/vaadin-context-menu": "4.3.15",
+    "@vaadin/vaadin-tabs": "3.0.5",
+    "@vaadin/vaadin-radio-button": "1.2.6",
+    "@vaadin/vaadin-lumo-styles": "1.5.0",
+    "@vaadin/vaadin-material-styles": "1.2.3"
   },
   "devDependencies": {
     "webpack": "4.42.0",
-    "webpack-cli": "3.3.10",
-    "webpack-dev-server": "3.9.0",
+    "webpack-cli": "3.3.11",
+    "webpack-dev-server": "3.10.3",
     "webpack-babel-multi-target-plugin": "2.3.3",
-    "copy-webpack-plugin": "5.1.0",
-    "compression-webpack-plugin": "3.0.1",
+    "copy-webpack-plugin": "5.1.1",
+    "compression-webpack-plugin": "3.1.0",
     "webpack-merge": "4.2.2",
-    "raw-loader": "3.0.0",
-    "terser": "4.6.7"
+    "raw-loader": "4.0.0",
+    "terser": "4.6.7",
+    "script-ext-html-webpack-plugin": "2.1.4",
+    "awesome-typescript-loader": "5.2.1",
+    "progress-webpack-plugin": "0.0.24",
+    "html-webpack-plugin": "3.2.0",
+    "typescript": "3.8.3"
   },
-  "vaadinAppPackageHash": "d589283b4783a58e45cf9e6ecf629de9bb1d5673595b9bf216b8b3f47501c1a7"
+  "vaadinAppPackageHash": "d589283b4783a58e45cf9e6ecf629de9bb1d5673595b9bf216b8b3f47501c1a7",
+  "vaadin": {
+    "dependencies": {
+      "@vaadin/router": "^1.6.0",
+      "@polymer/polymer": "3.2.0",
+      "@vaadin/vaadin-grid": "5.5.1",
+      "@vaadin/vaadin-icons": "4.3.1",
+      "@vaadin/vaadin-split-layout": "4.1.1",
+      "@vaadin/vaadin-combo-box": "5.0.11",
+      "@vaadin/vaadin-core-shrinkwrap": "15.0.4",
+      "@vaadin/vaadin-upload": "4.2.2",
+      "@vaadin/vaadin-dialog": "2.2.1",
+      "@vaadin/vaadin-select": "2.1.7",
+      "@vaadin/vaadin-app-layout": "2.0.4",
+      "@vaadin/vaadin-item": "2.1.1",
+      "@vaadin/vaadin-notification": "1.4.0",
+      "@vaadin/vaadin-progress-bar": "1.1.2",
+      "@vaadin/vaadin-ordered-layout": "1.1.0",
+      "@vaadin/vaadin-login": "1.0.1",
+      "@vaadin/vaadin-button": "2.2.2",
+      "@vaadin/vaadin-date-picker": "4.0.8",
+      "@vaadin/vaadin-text-field": "2.5.5",
+      "@vaadin/vaadin-menu-bar": "1.0.5",
+      "@vaadin/vaadin-custom-field": "1.0.11",
+      "@vaadin/vaadin-form-layout": "2.1.7",
+      "@vaadin/vaadin-accordion": "1.0.1",
+      "@polymer/iron-list": "3.0.2",
+      "@vaadin/vaadin-list-box": "1.2.0",
+      "@vaadin/vaadin-checkbox": "2.2.13",
+      "@vaadin/vaadin-details": "1.0.1",
+      "@polymer/iron-icon": "3.0.1",
+      "@vaadin/vaadin-time-picker": "2.0.7",
+      "@vaadin/vaadin-context-menu": "4.3.15",
+      "@vaadin/vaadin-tabs": "3.0.5",
+      "@vaadin/vaadin-radio-button": "1.2.6",
+      "@vaadin/vaadin-lumo-styles": "1.5.0",
+      "@vaadin/vaadin-material-styles": "1.2.3"
+    },
+    "devDependencies": {
+      "compression-webpack-plugin": "3.1.0",
+      "raw-loader": "4.0.0",
+      "webpack-cli": "3.3.11",
+      "script-ext-html-webpack-plugin": "2.1.4",
+      "awesome-typescript-loader": "5.2.1",
+      "terser": "4.6.7",
+      "copy-webpack-plugin": "5.1.1",
+      "webpack": "4.42.0",
+      "progress-webpack-plugin": "0.0.24",
+      "html-webpack-plugin": "3.2.0",
+      "typescript": "3.8.3",
+      "webpack-merge": "4.2.2",
+      "webpack-dev-server": "3.10.3"
+    },
+    "hash": "1f621052b7c6fb66681594e7cb7f763ee980a220a211b994c5c4e4f8e12b7220"
+  }
 }
