--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,8 @@
 		<vaadin-client-compiled.version>${vaadin-server.version}</vaadin-client-compiled.version>
 		<vaadin-themes.version>${vaadin-server.version}</vaadin-themes.version>
 
+		<vaadin-flow.version>3.0.5</vaadin-flow.version>
+
 		<vaadin.widgetset.mode>local</vaadin.widgetset.mode>
 		<vaadin.theme>mytheme</vaadin.theme>
 
@@ -155,5 +157,41 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<maven-clean-plugin.version>3.0.0</maven-clean-plugin.version>
 	</properties>
+
+	<profiles>
+		<profile>
+			<!-- Production mode is activated using -Pproduction -->
+			<id>production</id>
+			<properties>
+				<vaadin.productionMode>true</vaadin.productionMode>
+			</properties>
+
+			<dependencies>
+				<dependency>
+					<groupId>com.vaadin</groupId>
+					<artifactId>flow-server-production-mode</artifactId>
+					<version>${vaadin-flow.version}</version>
+				</dependency>
+			</dependencies>
+
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>com.vaadin</groupId>
+						<artifactId>flow-maven-plugin</artifactId>
+						<version>${vaadin-flow.version}</version>
+						<executions>
+							<execution>
+								<goals>
+									<goal>build-frontend</goal>
+								</goals>
+								<phase>compile</phase>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 
 </project>
