fixed jpa inheritance, added liquibase

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,6 +1,7 @@
 databaseChangeLog:
-  - includeAll:
-    path: ./changes/
   - changeset:
     id: 1
     author: 'vaadin-petstore'
+  - include:
+      file: db/changelog/changes/schema.yaml
+
