--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,4 @@
+server.port: 9999
 spring:
   main.allow-bean-definition-overriding: true
   h2:
@@ -6,15 +7,16 @@ spring:
       path: /h2
   datasource:
     url: jdbc:h2:file:~/vaadin-petstore
-    username: sa
-    password: sa
-    driverClassName: org.h2.Driver
+    username: petuser
+    password: petpass
   jpa:
+    generate-ddl: false
     properties:
+      #database-platform: org.hibernate.dialect.PostgreSQL10Dialect
       hibernate:
         ddl-auto: none
+        #ddl-auto: create
         dialect: org.hibernate.dialect.H2Dialect
-        temp:
-          use_jdbc_metadata_defaults: false
-#  liquibase:
-#    change-log: db/changelog/db.changelog-master.yaml
+
+liquibase:
+  change-log: db/changelog/db.changelog-master.yaml
