--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -1,6 +1,7 @@
 changeLogFile=classpath:db/changelog/db.changelog-master.yaml
 url=jdbc:h2:file:~/vaadin-petstore
-username=sa
-password=sa
+#url=jdbc:postgresql://server1/petstore
+username=petuser
+password=petpass
 driver=org.h2.Driver
 outputChangeLogFile=src/main/resources/db/changelog/changes/db.changelog-1.yaml
