--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -1,7 +1,9 @@
+# files
 changeLogFile=classpath:db/changelog/db.changelog-master.yaml
+outputChangeLogFile=src/main/resources/db/changelog/changes/db.changelog-1.yaml
+
+# DB connection properties
 url=jdbc:h2:file:~/vaadin-petstore
-#url=jdbc:postgresql://server1/petstore
 username=petuser
 password=petpass
 driver=org.h2.Driver
-outputChangeLogFile=src/main/resources/db/changelog/changes/db.changelog-1.yaml
