--- a/package.json
+++ b/package.json
@@ -40,20 +40,20 @@
     "@vaadin/vaadin-material-styles": "1.2.3"
   },
   "devDependencies": {
-    "webpack": "4.42.0",
-    "webpack-cli": "3.3.11",
-    "webpack-dev-server": "3.10.3",
-    "webpack-babel-multi-target-plugin": "2.3.3",
-    "copy-webpack-plugin": "5.1.1",
-    "compression-webpack-plugin": "3.1.0",
-    "webpack-merge": "4.2.2",
-    "raw-loader": "4.0.0",
-    "terser": "4.6.7",
-    "script-ext-html-webpack-plugin": "2.1.4",
     "awesome-typescript-loader": "5.2.1",
-    "progress-webpack-plugin": "0.0.24",
+    "compression-webpack-plugin": "3.1.0",
+    "copy-webpack-plugin": "5.1.1",
     "html-webpack-plugin": "3.2.0",
-    "typescript": "3.8.3"
+    "progress-webpack-plugin": "0.0.24",
+    "raw-loader": "4.0.0",
+    "script-ext-html-webpack-plugin": "2.1.4",
+    "terser": "4.6.7",
+    "typescript": "3.8.3",
+    "webpack": "4.42.0",
+    "webpack-babel-multi-target-plugin": "2.3.3",
+    "webpack-cli": "3.3.11",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "4.2.2"
   },
   "vaadinAppPackageHash": "d589283b4783a58e45cf9e6ecf629de9bb1d5673595b9bf216b8b3f47501c1a7",
   "vaadin": {
