--- a/package.json
+++ b/package.json
@@ -4,40 +4,41 @@
   "dependencies": {
     "@polymer/polymer": "3.2.0",
     "@webcomponents/webcomponentsjs": "^2.2.10",
-    "@vaadin/router": "^1.6.0",
+    "@vaadin/router": "1.7.2",
     "@vaadin/flow-frontend": "./target/flow-frontend",
-    "@vaadin/vaadin-grid": "5.5.1",
+    "@vaadin/vaadin-grid": "5.6.6",
     "@vaadin/vaadin-icons": "4.3.1",
-    "@vaadin/vaadin-split-layout": "4.1.1",
-    "@vaadin/vaadin-combo-box": "5.0.11",
-    "@vaadin/vaadin-core-shrinkwrap": "15.0.4",
-    "@vaadin/vaadin-upload": "4.2.2",
-    "@vaadin/vaadin-dialog": "2.2.1",
-    "@vaadin/vaadin-select": "2.1.7",
-    "@vaadin/vaadin-app-layout": "2.0.4",
-    "@vaadin/vaadin-item": "2.1.1",
-    "@vaadin/vaadin-notification": "1.4.0",
-    "@vaadin/vaadin-progress-bar": "1.1.2",
-    "@vaadin/vaadin-ordered-layout": "1.1.0",
-    "@vaadin/vaadin-login": "1.0.1",
-    "@vaadin/vaadin-button": "2.2.2",
-    "@vaadin/vaadin-date-picker": "4.0.8",
-    "@vaadin/vaadin-text-field": "2.5.5",
-    "@vaadin/vaadin-menu-bar": "1.0.5",
-    "@vaadin/vaadin-custom-field": "1.0.11",
-    "@vaadin/vaadin-form-layout": "2.1.7",
-    "@vaadin/vaadin-accordion": "1.0.1",
+    "@vaadin/vaadin-split-layout": "4.2.0",
+    "@vaadin/vaadin-combo-box": "5.1.1",
+    "@vaadin/vaadin-core-shrinkwrap": "16.0.2",
+    "@vaadin/vaadin-upload": "4.3.0",
+    "@vaadin/vaadin-dialog": "2.4.3",
+    "@vaadin/vaadin-select": "2.2.0",
+    "@vaadin/vaadin-app-layout": "2.1.0",
+    "@vaadin/vaadin-item": "2.2.0",
+    "@vaadin/vaadin-notification": "1.5.0",
+    "@vaadin/vaadin-progress-bar": "1.2.0",
+    "@vaadin/vaadin-ordered-layout": "1.3.0",
+    "@vaadin/vaadin-login": "1.1.0",
+    "@vaadin/vaadin-button": "2.3.0",
+    "@vaadin/vaadin-date-picker": "4.1.1",
+    "@vaadin/vaadin-text-field": "2.6.2",
+    "@vaadin/vaadin-menu-bar": "1.1.0",
+    "@vaadin/vaadin-custom-field": "1.1.0",
+    "@vaadin/vaadin-form-layout": "2.2.0",
+    "@vaadin/vaadin-accordion": "1.1.0",
     "@polymer/iron-list": "3.0.2",
-    "@vaadin/vaadin-list-box": "1.2.0",
-    "@vaadin/vaadin-checkbox": "2.2.13",
-    "@vaadin/vaadin-details": "1.0.1",
+    "@vaadin/vaadin-list-box": "1.3.0",
+    "@vaadin/vaadin-checkbox": "2.3.0",
+    "@vaadin/vaadin-details": "1.1.0",
     "@polymer/iron-icon": "3.0.1",
-    "@vaadin/vaadin-time-picker": "2.0.7",
-    "@vaadin/vaadin-context-menu": "4.3.15",
-    "@vaadin/vaadin-tabs": "3.0.5",
-    "@vaadin/vaadin-radio-button": "1.2.6",
-    "@vaadin/vaadin-lumo-styles": "1.5.0",
-    "@vaadin/vaadin-material-styles": "1.2.3"
+    "@vaadin/vaadin-time-picker": "2.1.1",
+    "@vaadin/vaadin-context-menu": "4.4.0",
+    "@vaadin/vaadin-tabs": "3.1.0",
+    "@vaadin/vaadin-radio-button": "1.3.0",
+    "@vaadin/vaadin-lumo-styles": "1.6.0",
+    "@vaadin/vaadin-material-styles": "1.3.2",
+    "@vaadin/vaadin-date-time-picker": "1.1.0"
   },
   "devDependencies": {
     "awesome-typescript-loader": "5.2.1",
@@ -53,45 +54,46 @@
     "webpack-babel-multi-target-plugin": "2.3.3",
     "webpack-cli": "3.3.11",
     "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "4.2.2"
+    "webpack-merge": "4.2.2",
+    "chokidar": "^3.4.0"
   },
-  "vaadinAppPackageHash": "d589283b4783a58e45cf9e6ecf629de9bb1d5673595b9bf216b8b3f47501c1a7",
   "vaadin": {
     "dependencies": {
-      "@vaadin/router": "^1.6.0",
+      "@vaadin/router": "1.7.2",
       "@polymer/polymer": "3.2.0",
-      "@vaadin/vaadin-grid": "5.5.1",
+      "@vaadin/vaadin-grid": "5.6.6",
       "@vaadin/vaadin-icons": "4.3.1",
-      "@vaadin/vaadin-split-layout": "4.1.1",
-      "@vaadin/vaadin-combo-box": "5.0.11",
-      "@vaadin/vaadin-core-shrinkwrap": "15.0.4",
-      "@vaadin/vaadin-upload": "4.2.2",
-      "@vaadin/vaadin-dialog": "2.2.1",
-      "@vaadin/vaadin-select": "2.1.7",
-      "@vaadin/vaadin-app-layout": "2.0.4",
-      "@vaadin/vaadin-item": "2.1.1",
-      "@vaadin/vaadin-notification": "1.4.0",
-      "@vaadin/vaadin-progress-bar": "1.1.2",
-      "@vaadin/vaadin-ordered-layout": "1.1.0",
-      "@vaadin/vaadin-login": "1.0.1",
-      "@vaadin/vaadin-button": "2.2.2",
-      "@vaadin/vaadin-date-picker": "4.0.8",
-      "@vaadin/vaadin-text-field": "2.5.5",
-      "@vaadin/vaadin-menu-bar": "1.0.5",
-      "@vaadin/vaadin-custom-field": "1.0.11",
-      "@vaadin/vaadin-form-layout": "2.1.7",
-      "@vaadin/vaadin-accordion": "1.0.1",
+      "@vaadin/vaadin-split-layout": "4.2.0",
+      "@vaadin/vaadin-combo-box": "5.1.1",
+      "@vaadin/vaadin-core-shrinkwrap": "16.0.2",
+      "@vaadin/vaadin-upload": "4.3.0",
+      "@vaadin/vaadin-dialog": "2.4.3",
+      "@vaadin/vaadin-select": "2.2.0",
+      "@vaadin/vaadin-app-layout": "2.1.0",
+      "@vaadin/vaadin-item": "2.2.0",
+      "@vaadin/vaadin-notification": "1.5.0",
+      "@vaadin/vaadin-progress-bar": "1.2.0",
+      "@vaadin/vaadin-ordered-layout": "1.3.0",
+      "@vaadin/vaadin-login": "1.1.0",
+      "@vaadin/vaadin-button": "2.3.0",
+      "@vaadin/vaadin-date-picker": "4.1.1",
+      "@vaadin/vaadin-text-field": "2.6.2",
+      "@vaadin/vaadin-menu-bar": "1.1.0",
+      "@vaadin/vaadin-custom-field": "1.1.0",
+      "@vaadin/vaadin-form-layout": "2.2.0",
+      "@vaadin/vaadin-accordion": "1.1.0",
       "@polymer/iron-list": "3.0.2",
-      "@vaadin/vaadin-list-box": "1.2.0",
-      "@vaadin/vaadin-checkbox": "2.2.13",
-      "@vaadin/vaadin-details": "1.0.1",
+      "@vaadin/vaadin-list-box": "1.3.0",
+      "@vaadin/vaadin-checkbox": "2.3.0",
+      "@vaadin/vaadin-details": "1.1.0",
       "@polymer/iron-icon": "3.0.1",
-      "@vaadin/vaadin-time-picker": "2.0.7",
-      "@vaadin/vaadin-context-menu": "4.3.15",
-      "@vaadin/vaadin-tabs": "3.0.5",
-      "@vaadin/vaadin-radio-button": "1.2.6",
-      "@vaadin/vaadin-lumo-styles": "1.5.0",
-      "@vaadin/vaadin-material-styles": "1.2.3"
+      "@vaadin/vaadin-time-picker": "2.1.1",
+      "@vaadin/vaadin-context-menu": "4.4.0",
+      "@vaadin/vaadin-tabs": "3.1.0",
+      "@vaadin/vaadin-radio-button": "1.3.0",
+      "@vaadin/vaadin-lumo-styles": "1.6.0",
+      "@vaadin/vaadin-material-styles": "1.3.2",
+      "@vaadin/vaadin-date-time-picker": "1.1.0"
     },
     "devDependencies": {
       "compression-webpack-plugin": "3.1.0",
@@ -106,8 +108,9 @@
       "html-webpack-plugin": "3.2.0",
       "typescript": "3.8.3",
       "webpack-merge": "4.2.2",
-      "webpack-dev-server": "3.10.3"
+      "webpack-dev-server": "3.10.3",
+      "chokidar": "^3.4.0"
     },
-    "hash": "a49bcc5db43a5c935f07d9766358387ed146783627ecb234fd0dae653aa70a41"
+    "hash": "506711028fc4ef521d1e43233a1d664f68fbb98d18a725d60bcc147619ed1708"
   }
 }
