--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,30 @@
  	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.6.RELEASE</version>
+		<version>2.3.2.RELEASE</version>
 	</parent>
+
+	<properties>
+		<vaadin.version>16.0.2</vaadin.version>
+		<vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
+		<vaadin-spring-boot-starter.version>${vaadin.version}</vaadin-spring-boot-starter.version>
+
+		<vaadin-server.version>8.11.1</vaadin-server.version>
+		<vaadin-push.version>${vaadin-server.version}</vaadin-push.version>
+		<vaadin-client-compiled.version>${vaadin-server.version}</vaadin-client-compiled.version>
+		<vaadin-themes.version>${vaadin-server.version}</vaadin-themes.version>
+
+		<vaadin-flow.version>3.1.6</vaadin-flow.version>
+
+		<vaadin.widgetset.mode>local</vaadin.widgetset.mode>
+		<vaadin.theme>petstore-theme</vaadin.theme>
+
+		<hibernate-validator.version>6.1.5.Final</hibernate-validator.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven-clean-plugin.version>3.1.0</maven-clean-plugin.version>
+	</properties>
 
 	<dependencyManagement>
 		<dependencies>
@@ -28,6 +50,11 @@
 	</dependencyManagement>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>${hibernate-validator.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
@@ -218,27 +245,6 @@
 			<url>http://maven.vaadin.com/vaadin-addons</url>
 		</repository>
 	</repositories>
-
-	<properties>
-		<vaadin.version>15.0.4</vaadin.version>
-		<vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
-		<vaadin-spring-boot-starter.version>${vaadin.version}</vaadin-spring-boot-starter.version>
-
-		<vaadin-server.version>8.10.3</vaadin-server.version>
-		<vaadin-push.version>${vaadin-server.version}</vaadin-push.version>
-		<vaadin-client-compiled.version>${vaadin-server.version}</vaadin-client-compiled.version>
-		<vaadin-themes.version>${vaadin-server.version}</vaadin-themes.version>
-
-		<vaadin-flow.version>3.0.5</vaadin-flow.version>
-
-		<vaadin.widgetset.mode>local</vaadin.widgetset.mode>
-		<vaadin.theme>petstore-theme</vaadin.theme>
-
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
-		<maven-clean-plugin.version>3.0.0</maven-clean-plugin.version>
-	</properties>
 
 	<profiles>
 		<profile>
