--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -20,13 +20,21 @@ spring:
         ddl-auto: none
         #ddl-auto: create
         dialect: org.hibernate.dialect.H2Dialect
+        format_sql: true
+    jpa:
+      show-sql: true
 
 liquibase:
   change-log: db/changelog/db.changelog-master.yaml
 
 vaadin.urlMapping: /ui/*
 
-logging.level.liquibase: debug
+logging.level:
+  liquibase: debug
+  org.hibernate.SQL: debug
+  org.hibernate.type.descriptor.sql.BasicBinder: trace
+  org.springframework.jdbc.core.JdbcTemplate: debug
+  org.springframework.jdbc.core.StatementCreatorUtils: trace
 
 management:
   endpoints:
