--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "dependencies": {
     "@polymer/polymer": "3.2.0",
     "@webcomponents/webcomponentsjs": "^2.2.10",
-    "@vaadin/router": "1.7.2",
     "@vaadin/flow-frontend": "./target/flow-frontend",
-    "@vaadin/vaadin-grid": "5.6.6",
+    "@vaadin/vaadin-grid": "5.6.7",
     "@vaadin/vaadin-icons": "4.3.1",
     "@vaadin/vaadin-split-layout": "4.2.0",
-    "@vaadin/vaadin-combo-box": "5.1.1",
-    "@vaadin/vaadin-core-shrinkwrap": "16.0.2",
+    "@vaadin/vaadin-combo-box": "5.2.0",
+    "@vaadin/vaadin-core-shrinkwrap": "14.3.4",
     "@vaadin/vaadin-upload": "4.3.0",
     "@vaadin/vaadin-dialog": "2.4.3",
     "@vaadin/vaadin-select": "2.2.0",
@@ -21,24 +20,25 @@
     "@vaadin/vaadin-ordered-layout": "1.3.0",
     "@vaadin/vaadin-login": "1.1.0",
     "@vaadin/vaadin-button": "2.3.0",
-    "@vaadin/vaadin-date-picker": "4.1.1",
+    "@vaadin/vaadin-date-picker": "4.2.0",
     "@vaadin/vaadin-text-field": "2.6.2",
     "@vaadin/vaadin-menu-bar": "1.1.0",
     "@vaadin/vaadin-custom-field": "1.1.0",
     "@vaadin/vaadin-form-layout": "2.2.0",
     "@vaadin/vaadin-accordion": "1.1.0",
-    "@polymer/iron-list": "3.0.2",
+    "@polymer/iron-list": "3.1.0",
     "@vaadin/vaadin-list-box": "1.3.0",
     "@vaadin/vaadin-checkbox": "2.3.0",
     "@vaadin/vaadin-details": "1.1.0",
     "@polymer/iron-icon": "3.0.1",
-    "@vaadin/vaadin-time-picker": "2.1.1",
+    "@vaadin/vaadin-time-picker": "2.2.0",
     "@vaadin/vaadin-context-menu": "4.4.0",
     "@vaadin/vaadin-tabs": "3.1.0",
     "@vaadin/vaadin-radio-button": "1.3.0",
     "@vaadin/vaadin-lumo-styles": "1.6.0",
     "@vaadin/vaadin-material-styles": "1.3.2",
-    "@vaadin/vaadin-date-time-picker": "1.1.0"
+    "@vaadin/vaadin-date-time-picker": "1.2.0",
+    "lit-element": "^2.2.1"
   },
   "devDependencies": {
     "awesome-typescript-loader": "5.2.1",
@@ -46,7 +46,7 @@
     "copy-webpack-plugin": "5.1.1",
     "html-webpack-plugin": "3.2.0",
     "progress-webpack-plugin": "0.0.24",
-    "raw-loader": "4.0.0",
+    "raw-loader": "3.1.0",
     "script-ext-html-webpack-plugin": "2.1.4",
     "terser": "4.6.7",
     "typescript": "3.8.3",
@@ -61,11 +61,11 @@
     "dependencies": {
       "@vaadin/router": "1.7.2",
       "@polymer/polymer": "3.2.0",
-      "@vaadin/vaadin-grid": "5.6.6",
+      "@vaadin/vaadin-grid": "5.6.7",
       "@vaadin/vaadin-icons": "4.3.1",
       "@vaadin/vaadin-split-layout": "4.2.0",
-      "@vaadin/vaadin-combo-box": "5.1.1",
-      "@vaadin/vaadin-core-shrinkwrap": "16.0.2",
+      "@vaadin/vaadin-combo-box": "5.2.0",
+      "@vaadin/vaadin-core-shrinkwrap": "14.3.4",
       "@vaadin/vaadin-upload": "4.3.0",
       "@vaadin/vaadin-dialog": "2.4.3",
       "@vaadin/vaadin-select": "2.2.0",
@@ -76,28 +76,30 @@
       "@vaadin/vaadin-ordered-layout": "1.3.0",
       "@vaadin/vaadin-login": "1.1.0",
       "@vaadin/vaadin-button": "2.3.0",
-      "@vaadin/vaadin-date-picker": "4.1.1",
+      "@vaadin/vaadin-date-picker": "4.2.0",
       "@vaadin/vaadin-text-field": "2.6.2",
       "@vaadin/vaadin-menu-bar": "1.1.0",
       "@vaadin/vaadin-custom-field": "1.1.0",
       "@vaadin/vaadin-form-layout": "2.2.0",
       "@vaadin/vaadin-accordion": "1.1.0",
-      "@polymer/iron-list": "3.0.2",
+      "@polymer/iron-list": "3.1.0",
       "@vaadin/vaadin-list-box": "1.3.0",
       "@vaadin/vaadin-checkbox": "2.3.0",
       "@vaadin/vaadin-details": "1.1.0",
       "@polymer/iron-icon": "3.0.1",
-      "@vaadin/vaadin-time-picker": "2.1.1",
+      "@vaadin/vaadin-time-picker": "2.2.0",
       "@vaadin/vaadin-context-menu": "4.4.0",
       "@vaadin/vaadin-tabs": "3.1.0",
       "@vaadin/vaadin-radio-button": "1.3.0",
       "@vaadin/vaadin-lumo-styles": "1.6.0",
       "@vaadin/vaadin-material-styles": "1.3.2",
-      "@vaadin/vaadin-date-time-picker": "1.1.0"
+      "@vaadin/vaadin-date-time-picker": "1.2.0",
+      "lit-element": "^2.2.1",
+      "@webcomponents/webcomponentsjs": "^2.2.10"
     },
     "devDependencies": {
       "compression-webpack-plugin": "3.1.0",
-      "raw-loader": "4.0.0",
+      "raw-loader": "3.1.0",
       "webpack-cli": "3.3.11",
       "script-ext-html-webpack-plugin": "2.1.4",
       "awesome-typescript-loader": "5.2.1",
@@ -109,8 +111,9 @@
       "typescript": "3.8.3",
       "webpack-merge": "4.2.2",
       "webpack-dev-server": "3.10.3",
-      "chokidar": "^3.4.0"
+      "chokidar": "^3.4.0",
+      "webpack-babel-multi-target-plugin": "2.3.3"
     },
-    "hash": "506711028fc4ef521d1e43233a1d664f68fbb98d18a725d60bcc147619ed1708"
+    "hash": "65700a1202cd277e50790b0f27a2911cefe84ee6eeae45b75ccb85ca7740504f"
   }
 }
