--- a/package.json
+++ b/package.json
@@ -38,15 +38,17 @@
     "@vaadin/vaadin-lumo-styles": "1.6.0",
     "@vaadin/vaadin-material-styles": "1.3.2",
     "@vaadin/vaadin-date-time-picker": "1.2.0",
-    "lit-element": "^2.2.1"
+    "lit-element": "^2.2.1",
+    "@vaadin/router": "1.7.2"
   },
   "devDependencies": {
     "awesome-typescript-loader": "5.2.1",
-    "compression-webpack-plugin": "3.1.0",
-    "copy-webpack-plugin": "5.1.1",
+    "chokidar": "^3.4.0",
+    "compression-webpack-plugin": "^5.0.1",
+    "copy-webpack-plugin": "^6.0.4",
     "html-webpack-plugin": "3.2.0",
     "progress-webpack-plugin": "0.0.24",
-    "raw-loader": "3.1.0",
+    "raw-loader": "4.0.0",
     "script-ext-html-webpack-plugin": "2.1.4",
     "terser": "4.6.7",
     "typescript": "3.8.3",
@@ -54,8 +56,7 @@
     "webpack-babel-multi-target-plugin": "2.3.3",
     "webpack-cli": "3.3.11",
     "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "4.2.2",
-    "chokidar": "^3.4.0"
+    "webpack-merge": "4.2.2"
   },
   "vaadin": {
     "dependencies": {
@@ -99,7 +100,7 @@
     },
     "devDependencies": {
       "compression-webpack-plugin": "3.1.0",
-      "raw-loader": "3.1.0",
+      "raw-loader": "4.0.0",
       "webpack-cli": "3.3.11",
       "script-ext-html-webpack-plugin": "2.1.4",
       "awesome-typescript-loader": "5.2.1",
