--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,12 @@
 	<artifactId>petstore</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<name>petstore</name>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	
  	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.2.RELEASE</version>
+		<version>2.3.5.RELEASE</version>
 	</parent>
 
 	<properties>
@@ -238,6 +238,9 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
 					<fork>false</fork>
+					<layers>
+						<enabled>true</enabled>
+					</layers>
 				</configuration>
 			</plugin>
 		</plugins>
