--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,7 +10,7 @@ spring:
       enabled: true
       path: /h2
   datasource:
-    url:  jdbc:h2:mem:vaadin-petstore
+    url:  jdbc:h2:mem:vaadin-petstore;DB_CLOSE_ON_EXIT=FALSE
     # file-based H2 results in liquibase checksum errors
     # url: jdbc:h2:file:~/vaadin-petstore
     username: petuser
