--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.net128.application.vaadin</groupId>
 	<artifactId>petstore</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.1</version>
 	<name>petstore</name>
 	<packaging>jar</packaging>
 	
@@ -16,25 +16,31 @@
 	</parent>
 
 	<properties>
-		<vaadin.version>16.0.3</vaadin.version>
+		<spring-boot.version>2.3.5.RELEASE</spring-boot.version>
+		
+		<vaadin.version>16.0.5</vaadin.version>
 		<vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
 		<vaadin-spring-boot-starter.version>${vaadin.version}</vaadin-spring-boot-starter.version>
 
-		<vaadin-server.version>8.11.2</vaadin-server.version>
+		<vaadin-server.version>8.12.0</vaadin-server.version>
 		<vaadin-push.version>${vaadin-server.version}</vaadin-push.version>
 		<vaadin-client-compiled.version>${vaadin-server.version}</vaadin-client-compiled.version>
 		<vaadin-themes.version>${vaadin-server.version}</vaadin-themes.version>
 
-		<vaadin-flow.version>3.1.7</vaadin-flow.version>
+		<vaadin-flow.version>4.0.5</vaadin-flow.version>
 
 		<vaadin.widgetset.mode>local</vaadin.widgetset.mode>
 		<vaadin.theme>petstore-theme</vaadin.theme>
 
-		<hibernate-validator.version>6.1.5.Final</hibernate-validator.version>
+		<hibernate-validator.version>6.1.6.Final</hibernate-validator.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<maven-clean-plugin.version>3.1.0</maven-clean-plugin.version>
+		
+		<jetty.version>9.4.34.v20201102</jetty.version>
+		<h2.version>1.4.200</h2.version>
+		<liquibase.version>4.1.1</liquibase.version>
 	</properties>
 
 	<dependencyManagement>
@@ -110,7 +116,7 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<version>1.4.200</version>
+			<version>${h2.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -124,18 +130,18 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.18.12</version>
+			<version>1.18.16</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>42.2.12</version>
+			<version>42.2.18</version>
 		</dependency>
 		<dependency>
 			<groupId>org.liquibase</groupId>
 			<artifactId>liquibase-core</artifactId>
-			<version>4.1.1</version>
+			<version>${liquibase.version}</version>
 		</dependency>
 	</dependencies>
 
@@ -144,7 +150,7 @@
 			<plugin>
 				<groupId>org.liquibase</groupId>
 				<artifactId>liquibase-maven-plugin</artifactId>
-				<version>3.8.9</version>
+				<version>${liquibase.version}</version>
 				<configuration>
 					<propertyFile>src/main/resources/liquibase.properties</propertyFile>
 					<changeLogFile>src/main/resources/db/changelog/db.changelog-master.yaml</changeLogFile>
@@ -157,17 +163,17 @@
 					<dependency>
 						<groupId>org.liquibase</groupId>
 						<artifactId>liquibase-core</artifactId>
-						<version>3.8.9</version>
+						<version>${liquibase.version}</version>
 					</dependency>
 					<dependency>
 						<groupId>org.liquibase.ext</groupId>
 						<artifactId>liquibase-hibernate5</artifactId>
-						<version>3.8</version>
+						<version>${liquibase.version}</version>
 					</dependency>
 					<dependency>
 						<groupId>org.springframework.boot</groupId>
 						<artifactId>spring-boot-starter-data-jpa</artifactId>
-						<version>2.2.6.RELEASE</version>
+						<version>${spring-boot.version}</version>
 					</dependency>
 					<dependency>
 						<groupId>javax.validation</groupId>
@@ -182,7 +188,7 @@
 					<dependency>
 						<groupId>com.h2database</groupId>
 						<artifactId>h2</artifactId>
-						<version>1.4.200</version>
+						<version>${h2.version}</version>
 					</dependency>
 				</dependencies>
 			</plugin>
@@ -199,7 +205,7 @@
 			<plugin>
 				<groupId>org.eclipse.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
-				<version>9.4.28.v20200408</version>
+				<version>${jetty.version}</version>
 				<configuration>
 					<scanIntervalSeconds>1</scanIntervalSeconds>
 				</configuration>
