--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "@vaadin/vaadin-lumo-styles": "1.6.0",
     "@vaadin/vaadin-material-styles": "1.3.2",
     "@vaadin/vaadin-date-time-picker": "1.1.0",
-    "@vaadin/router": "1.7.2"
+    "@vaadin/router": "1.7.2",
+    "lit-element": "2.3.1",
+    "@vaadin/form": "./target/flow-frontend/form"
   },
   "devDependencies": {
     "awesome-typescript-loader": "5.2.1",
@@ -54,7 +56,11 @@
     "webpack-babel-multi-target-plugin": "2.3.3",
     "webpack-cli": "3.3.11",
     "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "4.2.2"
+    "webpack-merge": "4.2.2",
+    "validator": "12.0.0",
+    "lit-html": "1.2.1",
+    "@types/validator": "10.11.3",
+    "lit-element": "2.3.1"
   },
   "vaadin": {
     "dependencies": {
@@ -93,26 +99,30 @@
       "@vaadin/vaadin-lumo-styles": "1.6.0",
       "@vaadin/vaadin-material-styles": "1.3.2",
       "@vaadin/vaadin-date-time-picker": "1.1.0",
-      "lit-element": "^2.2.1",
+      "lit-element": "2.3.1",
       "@webcomponents/webcomponentsjs": "^2.2.10"
     },
     "devDependencies": {
-      "compression-webpack-plugin": "3.1.0",
+      "compression-webpack-plugin": "4.0.1",
       "raw-loader": "4.0.0",
       "webpack-cli": "3.3.11",
       "script-ext-html-webpack-plugin": "2.1.4",
       "awesome-typescript-loader": "5.2.1",
       "terser": "4.6.7",
-      "copy-webpack-plugin": "5.1.1",
+      "copy-webpack-plugin": "5.1.2",
       "webpack": "4.42.0",
       "progress-webpack-plugin": "0.0.24",
       "html-webpack-plugin": "3.2.0",
       "typescript": "3.8.3",
       "webpack-merge": "4.2.2",
-      "webpack-dev-server": "3.10.3",
+      "webpack-dev-server": "3.11.0",
       "chokidar": "^3.4.0",
-      "webpack-babel-multi-target-plugin": "2.3.3"
+      "webpack-babel-multi-target-plugin": "2.3.3",
+      "validator": "12.0.0",
+      "lit-html": "1.2.1",
+      "@types/validator": "10.11.3",
+      "lit-element": "2.3.1"
     },
-    "hash": "97774f1aa40ab63a8da6921817f8db5fe6e0f124481230774ac05f36080ee7bd"
+    "hash": "cd9feeadc443bf76397586c123f31b681f0979021f81547613333cdb7c4acd25"
   }
 }
