--- a/package.json
+++ b/package.json
@@ -2,65 +2,64 @@
   "name": "no-name",
   "license": "UNLICENSED",
   "dependencies": {
+    "@polymer/iron-icon": "3.0.1",
+    "@polymer/iron-list": "3.0.2",
     "@polymer/polymer": "3.2.0",
     "@vaadin/flow-frontend": "./target/flow-frontend",
+    "@vaadin/form": "./target/flow-frontend/form",
+    "@vaadin/router": "1.7.2",
+    "@vaadin/vaadin-accordion": "1.1.0",
+    "@vaadin/vaadin-app-layout": "2.1.0",
+    "@vaadin/vaadin-button": "2.3.0",
+    "@vaadin/vaadin-checkbox": "2.3.0",
+    "@vaadin/vaadin-combo-box": "5.1.1",
+    "@vaadin/vaadin-context-menu": "4.4.0",
+    "@vaadin/vaadin-core-shrinkwrap": "16.0.5",
+    "@vaadin/vaadin-custom-field": "1.1.0",
+    "@vaadin/vaadin-date-picker": "4.1.1",
+    "@vaadin/vaadin-date-time-picker": "1.1.0",
+    "@vaadin/vaadin-details": "1.1.0",
+    "@vaadin/vaadin-dialog": "2.4.3",
+    "@vaadin/vaadin-form-layout": "2.2.0",
     "@vaadin/vaadin-grid": "5.6.7",
     "@vaadin/vaadin-icons": "4.3.1",
-    "@vaadin/vaadin-split-layout": "4.2.0",
-    "@vaadin/vaadin-combo-box": "5.1.1",
-    "@vaadin/vaadin-core-shrinkwrap": "16.0.5",
-    "@vaadin/vaadin-upload": "4.3.0",
-    "@vaadin/vaadin-dialog": "2.4.3",
-    "@vaadin/vaadin-select": "2.2.0",
-    "@vaadin/vaadin-app-layout": "2.1.0",
     "@vaadin/vaadin-item": "2.2.0",
-    "@vaadin/vaadin-notification": "1.5.0",
-    "@vaadin/vaadin-progress-bar": "1.2.0",
-    "@vaadin/vaadin-ordered-layout": "1.3.0",
-    "@vaadin/vaadin-login": "1.1.0",
-    "@vaadin/vaadin-button": "2.3.0",
-    "@vaadin/vaadin-date-picker": "4.1.1",
-    "@vaadin/vaadin-text-field": "2.6.2",
-    "@vaadin/vaadin-menu-bar": "1.1.0",
-    "@vaadin/vaadin-custom-field": "1.1.0",
-    "@vaadin/vaadin-form-layout": "2.2.0",
-    "@vaadin/vaadin-accordion": "1.1.0",
-    "@polymer/iron-list": "3.0.2",
     "@vaadin/vaadin-list-box": "1.3.0",
-    "@vaadin/vaadin-checkbox": "2.3.0",
-    "@vaadin/vaadin-details": "1.1.0",
-    "@polymer/iron-icon": "3.0.1",
-    "@vaadin/vaadin-time-picker": "2.1.1",
-    "@vaadin/vaadin-context-menu": "4.4.0",
-    "@vaadin/vaadin-tabs": "3.1.0",
-    "@vaadin/vaadin-radio-button": "1.3.1",
+    "@vaadin/vaadin-login": "1.1.0",
     "@vaadin/vaadin-lumo-styles": "1.6.0",
     "@vaadin/vaadin-material-styles": "1.3.2",
-    "@vaadin/vaadin-date-time-picker": "1.1.0",
-    "@vaadin/router": "1.7.2",
-    "lit-element": "2.3.1",
-    "@vaadin/form": "./target/flow-frontend/form"
+    "@vaadin/vaadin-menu-bar": "1.1.0",
+    "@vaadin/vaadin-notification": "1.5.0",
+    "@vaadin/vaadin-ordered-layout": "1.3.0",
+    "@vaadin/vaadin-progress-bar": "1.2.0",
+    "@vaadin/vaadin-radio-button": "1.3.1",
+    "@vaadin/vaadin-select": "2.2.0",
+    "@vaadin/vaadin-split-layout": "4.2.0",
+    "@vaadin/vaadin-tabs": "3.1.0",
+    "@vaadin/vaadin-text-field": "2.6.2",
+    "@vaadin/vaadin-time-picker": "2.1.1",
+    "@vaadin/vaadin-upload": "4.3.0"
   },
   "devDependencies": {
+    "@types/validator": "10.11.3",
     "awesome-typescript-loader": "5.2.1",
     "chokidar": "^3.4.0",
     "compression-webpack-plugin": "^5.0.1",
     "copy-webpack-plugin": "^6.0.4",
     "html-webpack-plugin": "3.2.0",
+    "lit-element": "2.3.1",
+    "lit-html": "1.2.1",
     "progress-webpack-plugin": "0.0.24",
     "raw-loader": "4.0.0",
     "script-ext-html-webpack-plugin": "2.1.4",
     "terser": "4.6.7",
     "typescript": "3.8.3",
+    "validator": "12.0.0",
     "webpack": "4.42.0",
     "webpack-babel-multi-target-plugin": "2.3.3",
     "webpack-cli": "3.3.11",
     "webpack-dev-server": "3.10.3",
-    "webpack-merge": "4.2.2",
-    "validator": "12.0.0",
-    "lit-html": "1.2.1",
-    "@types/validator": "10.11.3",
-    "lit-element": "2.3.1"
+    "webpack-merge": "4.2.2"
   },
   "vaadin": {
     "dependencies": {
@@ -123,6 +122,6 @@
       "@types/validator": "10.11.3",
       "lit-element": "2.3.1"
     },
-    "hash": "109e4e44852f51b06c491a4d9783aa9b6b6202e2e3e5e5912cc46ef6adec0740"
+    "hash": "0ff6a3fc3d28c3adc66e8b1b0c6d279c17c77076e00405718369d318764c61a6"
   }
 }
