--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
  	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.5.RELEASE</version>
+		<version>2.4.5</version>
 	</parent>
 
 	<properties>
@@ -244,7 +244,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
-					<fork>false</fork>
+					<fork>true</fork>
 					<layers>
 						<enabled>true</enabled>
 					</layers>
