--- a/build.gradle
+++ b/build.gradle
@@ -1,27 +1,26 @@
 plugins {
     id "org.springframework.boot" version "2.5.1"
+    id "io.spring.dependency-management" version "1.0.11.RELEASE"
     id "com.vaadin" version "20.0.1" 
     id "java"
     id "maven-publish"
 }
 
-repositories {
-    mavenLocal()
-    maven {
-        url = uri("http://maven.vaadin.com/vaadin-addons")
-    }
+ext {
+    vaadinVersion = '20.0.1'
+}
 
-    maven {
-        url = uri("https://repo.maven.apache.org/maven2/")
+repositories {
+    mavenCentral()
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "com.vaadin:vaadin-bom:${vaadinVersion}"
     }
 }
 
 dependencies {
-    implementation "com.vaadin:vaadin-server:8.13.0"
-    implementation "com.vaadin:vaadin-push:8.13.0"
-    implementation "com.vaadin:vaadin-client-compiled:8.13.0"
-    implementation "com.vaadin:vaadin-themes:8.13.0"
-    implementation "com.vaadin:vaadin-lumo-theme:6.0.7"
     implementation "com.vaadin:vaadin-spring-boot-starter:20.0.1"
     implementation "org.springframework.boot:spring-boot-starter-webflux:2.5.1"
     implementation "org.springframework.boot:spring-boot-starter-web:2.5.1"
@@ -34,10 +33,8 @@ dependencies {
     implementation "org.liquibase:liquibase-core:4.3.3"
     implementation "com.h2database:h2:1.4.200"
     implementation "org.postgresql:postgresql:42.2.20"
-    implementation "net.bytebuddy:byte-buddy:1.10.22"
     annotationProcessor "org.projectlombok:lombok:1.18.20"
     runtimeOnly "org.springframework.boot:spring-boot-devtools:2.5.1"
-//    compileOnly "javax.servlet:javax.servlet-api:4.0.1"
 }
 
 group = "com.net128.application.vaadin"
@@ -53,11 +50,13 @@ publishing {
     }
 }
 
-tasks.withType(JavaCompile) {
-    options.encoding = "UTF-8"
-}
+tasks.withType(JavaCompile) { options.encoding = "UTF-8" }
 
 vaadin {
     optimizeBundle = true
     productionMode = true
 }
+
+bootRun { dependsOn vaadinBuildFrontend }
+
+build { dependsOn vaadinBuildFrontend }
