--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,12 @@ types.d.ts
 *.DS_Store
 *~
 db.changelog-1.yaml
+
+node_modules
+package.json
+pnpm-lock.yaml
+pnpmfile.js
+tsconfig.json
+types.d.ts
+webpack.config.js
+webpack.generated.js
