fixed query, added sql logging profile

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -26,7 +26,7 @@ spring:
         format_sql: true
         jdbc.lob.non_contextual_creation: true
         temp.use_jdbc_metadata_defaults: false
-    show-sql: false
+    show-sql: true
     open-in-view: false
   mustache.check-template-location: false
 
@@ -37,13 +37,10 @@ vaadin.urlMapping: /ui/*
 
 logging.level:
   org.atmosphere.cpr: warn
-  # debug
   liquibase: info
   org.hibernate.SQL: info
-  # trace
   org.hibernate.type.descriptor.sql.BasicBinder: info
   org.springframework.jdbc.core.StatementCreatorUtils: info
-  # debug
   org.springframework.jdbc.core.JdbcTemplate: info
 
 management:
@@ -55,3 +52,15 @@ management:
     sensitive: false
     enabled: true
     web.exposure.include: "*"
+
+---
+spring.config.activate.on-profile: sql-debug
+name: sql-debug-YAML
+
+logging.level:
+  org.atmosphere.cpr: warn
+  liquibase: debug
+  org.hibernate.SQL: debug
+  org.hibernate.type.descriptor.sql.BasicBinder: trace
+  org.springframework.jdbc.core.StatementCreatorUtils: trace
+  org.springframework.jdbc.core.JdbcTemplate: debug
