added system.properties 4 heroku

--- a/build.gradle
+++ b/build.gradle
@@ -72,4 +72,10 @@ vaadin {
 bootRun { dependsOn vaadinBuildFrontend }
 build { dependsOn vaadinBuildFrontend }
 
+bootJar {
+	from ('system.properties') {
+    		into ''
+	}
+}
+
 apply from: "liquibase.gradle"
