updated versions, scrollbar styles, java 16, sql statistics

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -26,6 +26,7 @@ spring:
         format_sql: false
         jdbc.lob.non_contextual_creation: true
         temp.use_jdbc_metadata_defaults: false
+        generate_statistics: true
     show-sql: false
     open-in-view: false
   mustache.check-template-location: false
