--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -3,8 +3,5 @@ databaseChangeLog:
       id: 1
       author: petstore
   - includeAll:
-      path: schema
-      relativeToChangelogFile: true
-  - include:
-      file: load-data.yaml
+      path: changes
       relativeToChangelogFile: true
