--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,5 +1,6 @@
 databaseChangeLog:
-  - changeset:
+  - logicalFilePath: db.changelog-master.yaml
+  - changeSet:
       id: 1
       author: petstore
   - includeAll:
