--- a/src/main/resources/db/changelog/changes/20210904-010402.yaml
+++ b/src/main/resources/db/changelog/changes/20210904-010402.yaml
@@ -1,35 +1,31 @@
 databaseChangeLog:
-  - changeSet:
+- logicalFilePath: 20210904-010402.yaml
+- changeSet:
       id: load data
       author: petstore
       changes:
         - loadData:
-            file: ../data/20210904-010402-countries.tsv
-            relativeToChangelogFile: true
+            file: db/changelog/data/20210904-010402-countries.tsv
             separator: '	'
             quotchar: '"'
             tableName: COUNTRY
         - loadData:
-            file: ../data/20210904-010402-species.tsv
-            relativeToChangelogFile: true
+            file: db/changelog/data/20210904-010402-species.tsv
             separator: '	'
             quotchar: '"'
             tableName: SPECIES
         - loadData:
-            file: ../data/20210904-010402-customer.tsv
-            relativeToChangelogFile: true
+            file: db/changelog/data/20210904-010402-customer.tsv
             separator: '	'
             quotchar: '"'
             tableName: CUSTOMER
         - loadData:
-            file: ../data/20210904-010402-pet.tsv
-            relativeToChangelogFile: true
+            file: db/changelog/data/20210904-010402-pet.tsv
             separator: '	'
             quotchar: '"'
             tableName: PET
         - loadData:
-            file: ../data/20210904-010402-purchase.tsv
-            relativeToChangelogFile: true
+            file: db/changelog/data/20210904-010402-purchase.tsv
             separator: '	'
             quotchar: '"'
             tableName: PURCHASE
