fixed path references in changelogs

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -4,5 +4,4 @@ databaseChangeLog:
       id: 1
       author: petstore
   - includeAll:
-      path: changes
-      relativeToChangelogFile: true
+      path:  db/changelog/changes
